Updated random and hidden prompt generation logic for better image outputs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,13 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "commonjs", // Use CommonJS for Node.js
+    "moduleResolution": "node", // Node.js resolution
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "target": "es6", // Ensure compatibility with modern JavaScript
     "plugins": [
       {
         "name": "next"
@@ -21,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "websocket-server.ts"], // Include your websocket server file
   "exclude": ["node_modules"]
 }
