--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-ws": "ts-node websocket-server.ts"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -18,7 +19,9 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
